--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,22 @@ body {
     border-radius: 8px;
 }
 
+.kutu {
+  display: flex;
+    justify-content: center;
+    /* Yatayda ortalar */
+    align-items: center;
+      /* Dikeyde ortalar (yükseklik ayarlanmışsa) */
+    height: 100vh;
+    /* Container yüksekliğini ayarlamak */
+}
+.kutu-img {
+  max-width: 100%;
+  /* Resmin ekran genişliğinden taşmamasını sağlar */
+  height: auto;
+  /* Yüksekliği korur */
+
+}
 footer {
     background-color: #228b22; /* Yeşil arka plan */
 }
@@ -50,99 +66,12 @@ body, html {
     background-color: rgba(0, 0, 0, 0.5); /* Saydam arka plan: Siyah renk, %50 opaklık */
 }
 
-.header-content {
+/* .header-content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
+} */
 
- {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
+ 
